<resources>

    <string name="app_name">Android2Gaming2Gether</string>


    <string name="navBarMessage">Messages</string>
    <string name="navBarProfile">Profile</string>
    <string name="hello_str">Welcome</string>
    <string name="user_name_tv">User</string>
    <string name="search_game_dialog_hint">Enter game massage</string>
    <string name="drawer_sign_up">Sign up</string>
    <string name="drawer_log_in">Log in</string>
    <string name="drawer_log_out">Log out</string>
    <string name="username_hint">Enter username</string>
    <string name="email_hint">Enter email address</string>
    <string name="password_hint">Enter password</string>
    <string name="friends_str">Friends</string>
    <string name="home_str">Home</string>
    <string name="text_send">Type a message</string>
    <string name="my_games">My Games :</string>
    <string name="about_me">About me...</string>
    <string name="popup_menu_camera">Camera</string>
    <string name="popup_menu_gallery">Gallery</string>
    <string name="popup_menu_figures">Figures</string>
    <string name="game_dialog_choose">Choose a game</string>
    <string name="character_choose">Choose a character</string>
    <string name="popup_menu_view_profile">User Profile</string>
    <string name="popup_menu_send_message">Send Message</string>
    <string name="arabic">Arabic</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="hebrew">Hebrew</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="russian">Russian</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="level">Level :</string>
    <string-array name="languages">
        <item>@string/hebrew</item>
        <item>@string/english</item>
        <item>@string/french</item>
        <item>@string/chinese</item>
        <item>@string/german</item>
        <item>@string/italian</item>
        <item>@string/japanese</item>
        <item>@string/russian</item>
        <item>@string/korean</item>
        <item>@string/arabic</item>
    </string-array>
    <string name="message_btn">Message</string>
    <string name="profile_btn">Profile</string>
    <string name="delete_title">Delete friend</string>
    <string name="delete_message">Are you sure you want to delete this friend?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="post_btn">Post</string>
    <string name="new_topic">New Topic</string>
    <string name="choose_game_topic">Choose a game to create topic about :</string>
    <string name="comment_hint">Enter your comment here</string>
    <string name="picked">Picked</string>
    <string name="not_choose">Must enter all fields</string>
    <string name="add_friend">was added to your friends list</string>
    <string name="progress_title">Searching</string>
    <string name="progress_message">Please wait...</string>
    <string name="users_not_found">No matching users found</string>
    <string name="search_btn">Search</string>
    <string name="choose_game">Choose a game</string>
    <string name="distance">Distance (km) :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="all">All</string>
    <string name="language">"Language : "</string>
    <string name="game">"Game : "</string>
    <string name="skip">Skip</string>
    <string name="save_profile">Save Profile</string>
    <string name="enter_new_address_hint">Enter addres...</string>
    <string name="about_me_title">About me :</string>
    <string name="delete_game_title">Delete Game</string>
    <string name="delete_game_msg_1">Are you sure you want to delete</string>
    <string name="delete_game_msg_2">from game list?</string>
    <string name="sub_txt_1">"You subscribed to get notification from : "</string>
    <string name="sub_txt_2">"You unsubscribed from getting notification from : "</string>
    <string name="game_added">The game has been added to your game list</string>
    <string name="progress_title_2">Signing up</string>
    <string name="personal">Personal info</string>
    <string name="saved">Changes saved</string>
    <string name="hello_notif">Hey Gamer!</string>
    <string name="msg_notif">Check out some of the new posts!</string>
</resources>
