<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/drawer_sign_up"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/log_in_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:gravity="center"/>

    <EditText
        android:id="@+id/log_in_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="number|numberPassword"
        android:gravity="center"/>

</LinearLayout>