<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/blank_profile_img"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:gravity="center">

            <TextView
                android:id="@+id/profile_fragment_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_tv"
                android:textSize="25sp" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:padding="5dp">

        <ScrollView
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_me_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </ScrollView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_games"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_fragment_recycler_games"
        android:layout_width="330dp"
        android:layout_height="250dp"/>

</LinearLayout>
