<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/root_profile_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_mode_edit"
                android:layout_gravity="end"
                android:background="@android:color/transparent"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/image_edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-15dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_add_a_photo_black_24dp"
                    android:visibility="gone"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/blank_profile_img"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/profile_fragment_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:text="@string/user_name_tv"
                    android:textSize="25sp" />

                <ImageButton
                    android:id="@+id/profile_edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_edit"
                    android:layout_toEndOf="@id/profile_fragment_user_name"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="7dp"
                    android:visibility="gone"/>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="@string/age"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/age_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:text="--"
                    android:textStyle="bold"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="@string/gender"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/gender_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:text="--"
                    android:textStyle="bold"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="@string/level"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:text="--"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/about_me_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/about_me"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </ScrollView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/game_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/my_games"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_fragment_recycler_games"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_search_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>